added normalize css file

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@
     margin-bottom: 0.2em;
 }
 .card-options input{
-    width: 5.2em;
+    width: 4.4em;
+    height: 1.4em;
 }
 .action-area input{
     width: 10em;
